[package]
name = "pallet-hotfix-sufficients"
version = "1.0.0"
license = "Apache-2.0"
readme = "README.md"
description = "Hotfix zero-value account sufficients with non-zero-value nonces."
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }

log = { version = "0.4.17", default-features = false }

scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false,optional=true}

frame-support = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

frame-system = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-core = {  git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-runtime = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

sp-std = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
# Frontier
pallet-evm = {version="6.0.0-dev", path = "../evm", default-features = false }

[dev-dependencies]
# Substrate
sp-io = {  git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	# Frontier
	"pallet-evm/std",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-evm/try-runtime",
]
