[package]
name = "fp-account"
version = "1.0.0-dev"
license = "Apache-2.0"
description = "Primitives for Frontier AccountId20."
edition = "2021"


[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
impl-serde = { version = "0.4.0", default-features = false,optional = true}

libsecp256k1 = { version = "0.7.1", default-features = false }
log = { version = "0.4.20", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }


scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

serde = { version = "1.0", optional = true ,features = ["derive", "alloc"], default-features = false }


# Substrate
sp-core = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-io = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-runtime = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

sp-runtime-interface = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-std = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"hex/std",
	"impl-serde/std",
	"libsecp256k1/std",
	"log/std",
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	# Substrate
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
serde = [
	"dep:serde",
	"impl-serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]
