[package]
name = "fp-consensus"
version = "2.0.0-dev"
license = "Apache-2.0"
description = "Primitives for Frontier consensus."
edition = "2021"


[dependencies]
ethereum = { version = "0.14.0", default-features = false, features = ["with-codec"] }


scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }

# Substrate
sp-core = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-runtime = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

sp-std = {  git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"scale-codec/std",
	# Substrate
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
