[package]
name = "fp-rpc"
version = "3.0.0-dev"
license = "Apache-2.0"
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Substrate."
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.14.0", default-features = false , features = ["with-codec"]}
ethereum-types = { version = "0.14.1", default-features = false , features = ["rlp", "codec"]}

scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }


scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

# Substrate
sp-api = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-core = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-runtime = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

sp-state-machine = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-std = {  git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
# Frontier
fp-evm = { version = "3.0.0-dev", path = "../evm", default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"ethereum-types/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"sp-api/std",
	"sp-state-machine/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	# Frontier
	"fp-evm/std",
]
