[package]
name = "fp-self-contained"
version = "1.0.0-dev"
license = "Apache-2.0"
description = "Primitive Ethereum abstractions for Substrate."
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
#  serde = { version = "1.0",  optional = true ,features = ["derive", "alloc"] }
# Substrate

frame-support = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

sp-runtime = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }


[features]
default = ["std"]
std = [
	# "log/std",
	"scale-codec/std",
	"scale-info/std",
	# "serde",
	# Substrate
	"frame-support/std",
	"sp-runtime/std",
]
# serde = [
# 	"dep:serde",
# 	"scale-info/serde",
# 	"sp-runtime/serde",
# ]
try-runtime = [
	"sp-runtime/try-runtime",
]
