[package]
name = "fp-storage"
version = "2.0.0"
license = "Apache-2.0"
description = "Storage primitives for Ethereum RPC (web3) compatibility layer for Substrate."
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }

serde = { version = "1.0", default-features = false, optional = true ,features = ["derive", "alloc"] }


[features]
default = ["std"]
std = [
	"scale-codec/std",
	"serde/std",
]
serde = [
	"dep:serde",
]
